# lysa_engine

./: CMakeLists.txt  README.md
cmake/: compile_options.cmake  jolt.cmake  libraries.cmake  shaders.cmake
docs/: custom.css  doxypress.json  mainpage.dox  resources.drawio
docs/about/: 00_about.dox
docs/manual/: 000_manual.dox
src/: AABB.ixx  AssetsPack.cpp  AssetsPack.ixx  AsyncQueue.cpp  AsyncQueue.ixx  Context.cpp  Context.ixx  Event.cpp  Event.ixx  Exception.ixx  Input.cpp  Input.ixx  InputEvent.ixx  Lysa.cpp  Lysa.ixx  Math.cpp  Math.ixx  Memory.cpp  Memory.ixx  Types.ixx  VirtualFS.cpp  VirtualFS.ixx
src/bindings/lua/: Lua.cpp  Lua.ixx  lysa.lua  mobdebug.lua
src/depends/hlslpp/include/hlsl++/: bitmask.h  common.h  config.h  data_packing.h  dependent.h  half.h  matrix_float.h  matrix_float_type.h  quaternion.h  quaternion_type.h  type_traits.h  vector_double.h  vector_double_type.h  vector_float.h  vector_float8.h  vector_float_type.h  vector_int.h  vector_int_type.h  vector_uint.h  vector_uint_type.h
src/depends/hlslpp/include/hlsl++/transform/: common.h
src/depends/stb/: stb.cpp  stb_truetype.h
src/physics/: Configuration.ixx  PhysicsEngine.cpp  PhysicsEngine.ixx  PhysicsMaterial.ixx
src/physics/jolt/: CollisionArea.cpp  CollisionObject.cpp  CollisionShapes.cpp  KinematicBody.cpp  PhysicsBody.cpp  PhysicsEngine.cpp  PhysicsEngine.ixx  RayCast.cpp  RigidBody.cpp  StaticBody.cpp
src/platform/posix/: Main.cpp
src/platform/sdl/: Input.cpp  Lysa.cpp  RenderingWindow.cpp
src/platform/win32/: DirectoryWatcher.cpp  Input.cpp  Lysa.cpp  Main.cpp  RenderingWindow.cpp  mappings.h
src/renderers/: Configuration.ixx  DebugRenderer.cpp  DebugRenderer.ixx  DeferredRenderer.cpp  DeferredRenderer.ixx  ForwardRenderer.cpp  ForwardRenderer.ixx  GlobalDescriptorSet.cpp  GlobalDescriptorSet.ixx  GraphicPipelineData.cpp  GraphicPipelineData.ixx  Renderer.cpp  Renderer.ixx  SceneFrameData.cpp  SceneFrameData.ixx  Vector2DRenderer.cpp  Vector2DRenderer.ixx  Vector3DRenderer.cpp  Vector3DRenderer.ixx
src/renderers/pipelines/: FrustumCulling.cpp  FrustumCulling.ixx
src/renderers/renderpasses/: BloomPass.cpp  BloomPass.ixx  DepthPrepass.cpp  DepthPrepass.ixx  DisplayAttachment.ixx  FXAAPass.ixx  ForwardColorPass.cpp  ForwardColorPass.ixx  GBufferPass.cpp  GBufferPass.ixx  GammaCorrectionPass.ixx  LightingPass.cpp  LightingPass.ixx  PostProcessing.cpp  PostProcessing.ixx  Renderpass.cpp  Renderpass.ixx  SMAAPass.cpp  SMAAPass.ixx  SSAOPass.cpp  SSAOPass.ixx  ShaderMaterialPass.cpp  ShaderMaterialPass.ixx  ShadowMapPass.cpp  ShadowMapPass.ixx  TransparencyPass.cpp  TransparencyPass.ixx
src/resources/: Animation.cpp  Animation.ixx  AnimationLibrary.ixx  AnimationPlayer.cpp  AnimationPlayer.ixx  AnimationTrack.cpp  AnimationTrack.ixx  Camera.ixx  CollisionObject.ixx  CollisionShape.cpp  CollisionShape.ixx  Environment.ixx  Font.cpp  Font.ixx  Image.cpp  Image.ixx  Light.ixx  Material.cpp  Material.ixx  Mesh.cpp  Mesh.ixx  MeshInstance.cpp  MeshInstance.ixx  RenderTarget.cpp  RenderTarget.ixx  RenderView.ixx  RenderingWindow.cpp  RenderingWindow.ixx  Resources.ixx  ResourcesManager.ixx  ResourcesRegistry.ixx  Samplers.cpp  Samplers.ixx  Scene.cpp  Scene.ixx  Texture.ixx
src/resources/animations/: Animation.cpp  Animation.ixx
src/resources/physics/: CollisionArea.ixx  CollisionObject.ixx  CollisionShapes.ixx  KinematicBody.ixx  PhysicsBody.ixx  RayCast.ixx  RigidBody.ixx  StaticBody.ixx
src/shaders/: default.vert.slang  depth_prepass.vert.slang  frustum_culling.comp.slang  frustum_culling_shadowmap.comp.slang  glyph.inc.slang  glyph.slang  glyph_ui.slang  instances.inc.slang  quad.vert.slang  resources.inc.slang  samplers.inc.slang  scene.inc.slang  vector.inc.slang  vector.slang  vector_ui.slang
src/shaders/deferred/: deferred.inc.slang  gbuffers.frag.slang  glighting.frag.slang  glighting_bloom.frag.slang  ssao.frag.slang
src/shaders/forward/: forward.frag.slang  forward.inc.slang  forward_bloom.frag.slang  transparency_oit.frag.slang  transparency_oit_composite.frag.slang
src/shaders/lighting/: lighting.inc.slang  pbr.inc.slang
src/shaders/postprocess/: aces.frag.slang  bloom.frag.slang  blur.frag.slang  common.inc.slang  depth_buffer.frag.slang  fxaa.frag.slang  gamma_correction.frag.slang  greyscale.frag.slang  passthrough.frag.slang  postprocess.inc.slang  reinhard.frag.slang  smaa_blend_weight.frag.slang  smaa_edge_detect.frag.slang  smaa_neighborhood_blend.frag.slang  ssao_blur.frag.slang
src/shaders/shadows/: shadowmap.frag.slang  shadowmap.inc.slang  shadowmap.vert.slang  shadowmap_cubemap.frag.slang  shadows.inc.slang
src/utils/: AABB.cpp  AsyncTasksPool.cpp  AsyncTasksPool.ixx  BlurData.ixx  DeferredTasksBuffer.cpp  DeferredTasksBuffer.ixx  DirectoryWatcher.ixx  Frustum.cpp  Frustum.ixx  Log.cpp  Log.ixx  Rect.ixx  Utils.cpp  Utils.ixx
tools/blender/: blender_lysa_addon.py
